# Raytracing

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Colour.hpp  Common.hpp  Hittable.hpp  HittableList.cpp  HittableList.hpp  README.md  Ray.hpp  Sphere.cpp  Vec3.hpp  conanfile.txt  main.cpp
include/: Camera.hpp  Colour.hpp  Common.hpp  Hittable.hpp  HittableList.hpp  Material.hpp  Ray.hpp  Sphere.hpp  Vec3.hpp
include/Camera/: Camera.hpp
include/Colour/: Colour.hpp
include/Common/: Common.hpp
include/Hittable/: Hittable.hpp
include/HittableList/: HittableList.hpp
include/Ray/: Ray.hpp
include/Sphere/: Sphere.hpp
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Colour.cpp  Colour.hpp  Common.hpp  HittableList.cpp  Material.cpp  Sphere.cpp  Vec3.cpp  main.cpp
src/Camera/: Camera.cpp
src/Colour/: Colour.cpp
src/Common/: Common.cpp
src/Hittable/: Hittable.cpp
src/HittableList/: HittableList.cpp
src/Ray/: Ray.cpp
src/Sphere/: Sphere.cpp
src/Vec3/: Vec3.cpp
tests/: CMakeLists.txt  Camera.test.cpp  Ray.test.cpp  Vec3.test.cpp
